--- a/ID-Omkatter/ID-Omkatter/build.xml
+++ b/ID-Omkatter/ID-Omkatter/build.xml
@@ -157,13 +157,28 @@
         <param name="gmlfile.name" path="@gmlfile"/>
         <param name="oldGUID" path="org/text()"/>
         <param name="newGUID" path="new/text()"/>
+        <param name="consolidatie" path="../../consolidatie/text()" default="0"/>
         <actions>
-          <xslt in="${output.dir}/@{gmlfile.name}" out="${temp.dir}/@{gmlfile.name}" extension=".gml" style="guids.xsl" processor="trax" force="true">
-            <classpath location="saxon9he.jar"/>
-            <param name="oldGUID" expression="@{oldGUID}"/>
-            <param name="newGUID" expression="@{newGUID}"/>
-          </xslt>
-          <copy file="${temp.dir}/@{gmlfile.name}" tofile="${output.dir}/@{gmlfile.name}"/>
+          <if>
+            <equals arg1="@{consolidatie}" arg2="0"/>
+            <then>
+              <xslt in="${output.dir}/@{gmlfile.name}" out="${temp.dir}/@{gmlfile.name}" extension=".gml" style="guids.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="oldGUID" expression="@{oldGUID}"/>
+                <param name="newGUID" expression="@{newGUID}"/>
+              </xslt>
+              <copy file="${temp.dir}/@{gmlfile.name}" tofile="${output.dir}/@{gmlfile.name}"/>
+            </then>
+            <else>
+              <xslt in="${output.dir}/@{oldGUID}.gml" out="${temp.dir}/@{newGUID}.gml" extension=".gml" style="guids.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="oldGUID" expression="@{oldGUID}"/>
+                <param name="newGUID" expression="@{newGUID}"/>
+              </xslt>
+              <delete file="${output.dir}/@{oldGUID}.gml" failonerror="no"/>
+              <copy file="${temp.dir}/@{newGUID}.gml" tofile="${output.dir}/@{newGUID}.gml"/>
+            </else>
+          </if>
         </actions>
       </call>
     </xmltask>
@@ -182,11 +197,11 @@
                   <if>
                     <available file="bron_@{number}/@{gmlfile.name}"/>
                     <then>
-
                       <xslt in="${output_@{number}.dir}/@{gmlfile.name}" out="${temp_@{number}.dir}/@{gmlfile.name}" extension=".gml" style="guids.xsl" processor="trax" force="true">
                         <classpath location="saxon9he.jar"/>
                         <param name="oldGUID" expression="@{oldGUID}"/>
                         <param name="newGUID" expression="@{newGUID}"/>
+                        <param name="consolidaties" expression="0"/>
                       </xslt>
                       <copy file="${temp_@{number}.dir}/@{gmlfile.name}" tofile="${output_@{number}.dir}/@{gmlfile.name}"/>
                     </then>
@@ -204,13 +219,19 @@
         <param name="locatiefile.name" path="@locatiefile"/>
         <param name="oldGUID" path="org/text()"/>
         <param name="newGUID" path="new/text()"/>
+        <param name="consolidatie" path="consolidatie/text()" default="0"/>
         <actions>
+          <if>
+            <equals arg1="@{consolidatie}" arg2="0"/>
+            <then>
           <xslt in="${output.dir}/@{locatiefile.name}" out="${temp.dir}/@{locatiefile.name}" extension=".xml" style="guids.xsl" processor="trax" force="true">
             <classpath location="saxon9he.jar"/>
             <param name="oldGUID" expression="@{oldGUID}"/>
             <param name="newGUID" expression="@{newGUID}"/>
           </xslt>
           <copy file="${temp.dir}/@{locatiefile.name}" tofile="${output.dir}/@{locatiefile.name}"/>
+            </then>
+          </if>
         </actions>
       </call>
     </xmltask>
@@ -249,13 +270,19 @@
         <param name="gmlfile.name" path="@gmlfile"/>
         <param name="oldGUID" path="org/text()"/>
         <param name="newGUID" path="new/text()"/>
+        <param name="consolidatie" path="consolidatie/text()" default="0"/>
         <actions>
+          <if>
+            <equals arg1="@{consolidatie}" arg2="0"/>
+            <then>
           <xslt in="${output.dir}/@{gmlfile.name}" out="${temp.dir}/@{gmlfile.name}" extension=".gml" style="guids.xsl" processor="trax" force="true">
             <classpath location="saxon9he.jar"/>
             <param name="oldGUID" expression="@{oldGUID}"/>
             <param name="newGUID" expression="@{newGUID}"/>
           </xslt>
           <copy file="${temp.dir}/@{gmlfile.name}" tofile="${output.dir}/@{gmlfile.name}"/>
+            </then>
+          </if>
         </actions>
       </call>
     </xmltask>
@@ -786,7 +813,6 @@
         <param name="oldIoRefId" path="oldIoRefId/text()"/>
         <param name="oldIoWorkId" path="oldIoWorkId/text()"/>
         <param name="gmlFile" path="gml/text()"/>
-        <param name="gioFile" path="gio/text()"/>
         <actions>
           <xslt in="${output.dir}/@{gmlFile}" out="${temp.dir}/@{gmlFile}" extension=".gml" style="informatieobjectRefs.xsl" processor="trax" force="true">
             <classpath location="saxon9he.jar"/>
@@ -809,7 +835,6 @@
                 <param name="oldIoRefId" path="oldIoRefId/text()"/>
                 <param name="oldIoWorkId" path="oldIoWorkId/text()"/>
                 <param name="gmlFile" path="gml/text()"/>
-                <param name="gioFile" path="gio/text()"/>
                 <actions>
                   <if>
                     <available file="bron_@{number}/@{gmlFile}"/>
@@ -835,7 +860,6 @@
         <param name="besluit.name" path="../../file[contains(@type,'besluit.xml')]/name/text()"/>
         <param name="oldIoRefId" path="oldIoRefId/text()"/>
         <param name="oldIoWorkId" path="oldIoWorkId/text()"/>
-        <param name="gmlFile" path="gml/text()"/>
         <param name="gioFile" path="gio/text()"/>
         <actions>
           <xslt in="${output.dir}/@{gioFile}" out="${temp.dir}/@{gioFile}" extension=".xml" style="informatieobjectRefs.xsl" processor="trax" force="true">
@@ -858,7 +882,6 @@
                 <param name="besluit.name" path="../../file[contains(@type,'besluit.xml')]/name/text()"/>
                 <param name="oldIoRefId" path="oldIoRefId/text()"/>
                 <param name="oldIoWorkId" path="oldIoWorkId/text()"/>
-                <param name="gmlFile" path="gml/text()"/>
                 <param name="gioFile" path="gio/text()"/>
                 <actions>
                   <if>
@@ -887,12 +910,18 @@
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/file[contains(@type,'gio.xml')]">
         <param name="giofile.name" path="name/text()"/>
+        <param name="consolidatie" path="consolidatie/text()" default="0"/>
         <actions>
-          <xslt in="${output.dir}/@{giofile.name}" out="${temp.dir}/@{giofile.name}" extension=".xml" style="checksum_hash.xsl" processor="trax" force="true">
-            <classpath location="saxon9he.jar"/>
-            <param name="temp.dir" expression="${temp.dir}"/>
-          </xslt>
-          <copy file="${temp.dir}/@{giofile.name}" tofile="${output.dir}/@{giofile.name}"/>
+          <if>
+            <equals arg1="@{consolidatie}" arg2="0"/>
+            <then>
+              <xslt in="${output.dir}/@{giofile.name}" out="${temp.dir}/@{giofile.name}" extension=".xml" style="checksum_hash.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="temp.dir" expression="${temp.dir}"/>
+              </xslt>
+              <copy file="${temp.dir}/@{giofile.name}" tofile="${output.dir}/@{giofile.name}"/>
+            </then>
+          </if>
         </actions>
       </call>
     </xmltask>
@@ -927,25 +956,37 @@
   <!-- maak hash-code -->
 
   <target name="checksum" description="Maak hash-codes">
-    <foreach target="checksum.execute" param="file.fullname">
-      <path>
-        <fileset dir="${output.dir}"/>
-      </path>
-    </foreach>
-    <for list="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15" param="number">
-      <sequential>
-        <if>
-          <available file="bron_@{number}" type="dir"/>
-          <then>
-            <foreach target="checksum.execute.2" param="file.fullname" >
-              <path>
-                <fileset dir="${output_@{number}.dir}"/>
-              </path>
-            </foreach>
-          </then>
-        </if>
-      </sequential>
-    </for>
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index">
+        <param name="consolidatie" path="consolidatie/text()" default="0"/>
+        <actions>
+          <if>
+            <equals arg1="@{consolidatie}" arg2="0"/>
+            <then>
+              <foreach target="checksum.execute" param="file.fullname">
+                <path>
+                  <fileset dir="${output.dir}"/>
+                </path>
+              </foreach>
+              <for list="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15" param="number">
+                <sequential>
+                  <if>
+                    <available file="bron_@{number}" type="dir"/>
+                    <then>
+                      <foreach target="checksum.execute.2" param="file.fullname">
+                        <path>
+                          <fileset dir="${output_@{number}.dir}"/>
+                        </path>
+                      </foreach>
+                    </then>
+                  </if>
+                </sequential>
+              </for>
+            </then>
+          </if>
+        </actions>
+      </call>
+    </xmltask>
   </target>
 
   <target name="checksum.execute">
@@ -962,10 +1003,7 @@
   <target name="checksum.execute.2">
     <basename property="file.name" file="${file.fullname}"/>
     <dirname property="_dir" file="${file.fullname}"/>
-    <script language="javascript">
-      var before = project.getProperty("_dir");
-      project.setProperty("temp.dir", before.replaceAll("resultaat_", "temp_"));
-    </script>
+    <script language="javascript"> var before = project.getProperty("_dir"); project.setProperty("temp.dir", before.replaceAll("resultaat_", "temp_")); </script>
     <checksum file="${file.fullname}" algorithm="SHA-512" property="file.checksum"/>
     <xslt in="template.xml" out="${temp.dir}/checksum/${file.name}.xml" style="checksum.xsl" processor="trax" force="true">
       <classpath location="saxon9he.jar"/>
