--- a/ID-Omkatter/ID-Omkatter/build.xml
+++ b/ID-Omkatter/ID-Omkatter/build.xml
@@ -177,6 +177,20 @@
               </xslt>
               <delete file="${output.dir}/@{oldGUID}.gml" failonerror="no"/>
               <copy file="${temp.dir}/@{newGUID}.gml" tofile="${output.dir}/@{newGUID}.gml"/>
+              <!-- manifest-bhkv -->
+              <xslt in="${output.dir}/manifest-bhkv.xml" out="${temp.dir}/manifest-bhkv.xml" extension=".xml" style="guids.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="oldGUID" expression="@{oldGUID}"/>
+                <param name="newGUID" expression="@{newGUID}"/>
+              </xslt>
+              <copy file="${temp.dir}/manifest-bhkv.xml" tofile="${output.dir}/manifest-bhkv.xml"/>
+              <!-- manifest -->
+              <xslt in="${output.dir}/manifest.xml" out="${temp.dir}/manifest.xml" extension=".xml" style="guids.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="oldGUID" expression="@{oldGUID}"/>
+                <param name="newGUID" expression="@{newGUID}"/>
+              </xslt>
+              <copy file="${temp.dir}/manifest.xml" tofile="${output.dir}/manifest.xml"/>
             </else>
           </if>
         </actions>
@@ -224,12 +238,12 @@
           <if>
             <equals arg1="@{consolidatie}" arg2="0"/>
             <then>
-          <xslt in="${output.dir}/@{locatiefile.name}" out="${temp.dir}/@{locatiefile.name}" extension=".xml" style="guids.xsl" processor="trax" force="true">
-            <classpath location="saxon9he.jar"/>
-            <param name="oldGUID" expression="@{oldGUID}"/>
-            <param name="newGUID" expression="@{newGUID}"/>
-          </xslt>
-          <copy file="${temp.dir}/@{locatiefile.name}" tofile="${output.dir}/@{locatiefile.name}"/>
+              <xslt in="${output.dir}/@{locatiefile.name}" out="${temp.dir}/@{locatiefile.name}" extension=".xml" style="guids.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="oldGUID" expression="@{oldGUID}"/>
+                <param name="newGUID" expression="@{newGUID}"/>
+              </xslt>
+              <copy file="${temp.dir}/@{locatiefile.name}" tofile="${output.dir}/@{locatiefile.name}"/>
             </then>
           </if>
         </actions>
@@ -275,12 +289,12 @@
           <if>
             <equals arg1="@{consolidatie}" arg2="0"/>
             <then>
-          <xslt in="${output.dir}/@{gmlfile.name}" out="${temp.dir}/@{gmlfile.name}" extension=".gml" style="guids.xsl" processor="trax" force="true">
-            <classpath location="saxon9he.jar"/>
-            <param name="oldGUID" expression="@{oldGUID}"/>
-            <param name="newGUID" expression="@{newGUID}"/>
-          </xslt>
-          <copy file="${temp.dir}/@{gmlfile.name}" tofile="${output.dir}/@{gmlfile.name}"/>
+              <xslt in="${output.dir}/@{gmlfile.name}" out="${temp.dir}/@{gmlfile.name}" extension=".gml" style="guids.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="oldGUID" expression="@{oldGUID}"/>
+                <param name="newGUID" expression="@{newGUID}"/>
+              </xslt>
+              <copy file="${temp.dir}/@{gmlfile.name}" tofile="${output.dir}/@{gmlfile.name}"/>
             </then>
           </if>
         </actions>
@@ -339,6 +353,7 @@
             <xmltask source="${temp_@{number}.dir}/index.xml">
               <call path="index/file[contains(@ow,'true')]">
                 <param name="sourceFileName" path="name/text()"/>
+                <param name="consolidatie" path="../consolidatie/text()" default="0"/>
                 <actions>
                   <if>
                     <available file="bron_@{number}/@{sourceFileName}"/>
@@ -346,6 +361,7 @@
                       <xslt in="${output_@{number}.dir}/@{sourceFileName}" out="${temp_@{number}.dir}/@{sourceFileName}" extension=".xml" style="owids.xsl" processor="trax" force="true">
                         <classpath location="saxon9he.jar"/>
                         <param name="alreadyRetrievedDateTime" expression="${build.currentDate}"/>
+                        <param name="consolidatie" expression="@{consolidatie}"/>
                       </xslt>
                       <copy file="${temp_@{number}.dir}/@{sourceFileName}" tofile="${output_@{number}.dir}/@{sourceFileName}"/>
                     </then>
@@ -487,15 +503,32 @@
         </if>
       </sequential>
     </for>
+    
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index/file[contains(@ow,'true')]">
+        <param name="sourceFileName" path="name/text()"/>
+        <param name="consolidatie" path="../consolidatie/text()" default="0"/>
+        <actions>
+          <xslt in="${output.dir}/@{sourceFileName}" out="${temp.dir}/@{sourceFileName}" extension=".xml" style="leveringid_opdracht.xsl" processor="trax" force="true">
+            <classpath location="saxon9he.jar"/>
+            <param name="alreadyRetrievedDateTime" expression="${build.currentDate}"/>
+            <param name="consolidatie" expression="@{consolidatie}"/>
+          </xslt>
+          <copy file="${temp.dir}/@{sourceFileName}" tofile="${output.dir}/@{sourceFileName}"/>
+        </actions>
+      </call>
+    </xmltask>
 
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/leveringId/referencefile">
         <param name="referencefile.name" path="text()"/>
+        <param name="consolidatie" path="consolidatie/text()" default="0"/>
         <param name="newId" path="../new/text()"/>
         <actions>
           <xslt in="${output.dir}/@{referencefile.name}" out="${temp.dir}/@{referencefile.name}" extension=".xml" style="leveringid_opdracht.xsl" processor="trax" force="true">
             <classpath location="saxon9he.jar"/>
             <param name="newId" expression="@{newId}"/>
+            <param name="consolidatie" expression="@{consolidatie}"/>
           </xslt>
           <copy file="${temp.dir}/@{referencefile.name}" tofile="${output.dir}/@{referencefile.name}"/>
         </actions>
@@ -532,6 +565,24 @@
   </target>
 
   <target name="doelids" description="Verandert Doelids door er een datum/tijd string achter te zetten.">
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index">
+        <param name="consolidatie" path="consolidatie/text()" default="0"/>
+        <actions>
+          <if>
+            <equals arg1="@{consolidatie}" arg2="1"/>
+            <then>
+              <xslt in="${output.dir}/consolidaties.xml" out="${temp.dir}/consolidaties.xml" extension=".xml" style="doelids.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="alreadyRetrievedDateTime" expression="${build.currentDate}"/>
+              </xslt>
+              <copy file="${temp.dir}/consolidaties.xml" tofile="${output.dir}/consolidaties.xml"/>
+            </then>
+          </if>
+        </actions>
+      </call>
+    </xmltask>
+
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/file[contains(@type,'manifest-ow.xml')]">
         <param name="file.name" path="name/text()"/>
@@ -617,13 +668,35 @@
     <xmltask source="${temp.dir}/index.xml">
       <call path="index/file[contains(@type,'besluit.xml')]">
         <param name="besluit.name" path="../file[contains(@type,'besluit.xml')]/name/text()"/>
-        <param name="manifest-ow.name" path="../file[contains(@type,'manifest-ow.xml')]/name/text()"/>
         <actions>
           <xslt in="${output.dir}/@{besluit.name}" out="${temp.dir}/@{besluit.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
             <classpath location="saxon9he.jar"/>
             <param name="alreadyRetrievedDateTime" expression="${build.currentDate}"/>
           </xslt>
           <copy file="${temp.dir}/@{besluit.name}" tofile="${output.dir}/@{besluit.name}"/>
+        </actions>
+      </call>
+    </xmltask>
+    <xmltask source="${temp.dir}/index.xml">
+      <call path="index">
+        <param name="manifest-ow.name" path="file[contains(@type,'manifest-ow.xml')]/name/text()"/>
+        <param name="consolidatie" path="consolidatie/text()" default="0"/>
+        <actions>
+          <if>
+            <equals arg1="@{consolidatie}" arg2="1"/>
+            <then>
+              <xslt in="${output.dir}/consolidaties.xml" out="${temp.dir}/consolidaties.xml" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="alreadyRetrievedDateTime" expression="${build.currentDate}"/>
+              </xslt>
+              <copy file="${temp.dir}/consolidaties.xml" tofile="${output.dir}/consolidaties.xml"/>
+              <xslt in="${output.dir}/manifest-bhkv.xml" out="${temp.dir}/manifest-bhkv.xml" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
+                <classpath location="saxon9he.jar"/>
+                <param name="alreadyRetrievedDateTime" expression="${build.currentDate}"/>
+              </xslt>
+              <copy file="${temp.dir}/manifest-bhkv.xml" tofile="${output.dir}/manifest-bhkv.xml"/>
+            </then>
+          </if>
           <xslt in="${output.dir}/@{manifest-ow.name}" out="${temp.dir}/@{manifest-ow.name}" extension=".xml" style="besluit_regelingids.xsl" processor="trax" force="true">
             <classpath location="saxon9he.jar"/>
             <param name="alreadyRetrievedDateTime" expression="${build.currentDate}"/>
